--- a/en/index.html
+++ b/en/index.html
@@ -14,11 +14,10 @@
 	<link rel="stylesheet" href="../css/reset.css" media="all">
 	<link rel="stylesheet" href="../css/slick.css" media="all">
 	<link rel="stylesheet" href="../css/jquery.fancybox.min.css" media="all">
-	<link rel="stylesheet" href="../css/style.css?v2" media="all">
+	<link rel="stylesheet" href="../css/style.css?v3" media="all">
 
 	<!--[if lt IE 9]>
 		<script type="text/javascript" src="js/html5.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/ie.css" media="all" />
 	<![endif]-->
 </head>
 <body>
@@ -80,7 +79,7 @@
 				<div class="box-cell">
 					<div class="start-box">
 						<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 90 107"><polygon points="0 27 0 81 15 89 15 89 46 107 46 90 15 72 15 36 0 27" fill="#3000ff"/><polygon points="30 63 15 72 46 90 77 71 62 63 46 72 30 63" fill="#82e2ff"/><polygon points="92 80 46 107 46 90 77 71 77 35 92 27 92 80" fill="#037ce4"/><polygon points="46 35 30 44 30 63 15 72 15 36 46 18 46 35" fill="#008be8"/><polygon points="77 35 46 18 46 35 62 44 62 63 77 71 77 35" fill="#3700ff"/><polygon points="46 0 0 27 15 36 46 18 77 35 92 27 46 0" fill="#80daff"/><polygon points="30 44 46 53 46 72 30 63 30 44" fill="#720fb7"/><polygon points="62 44 46 53 46 72 62 63 62 44" fill="#b202bb"/><polygon points="46 35 30 44 46 53 62 44 46 35" fill="#e700a9"/></svg>
-						<div class="typing-wrapper"><span class="typing en"></span></div>
+						<div class="typing-wrapper">Public tokensale <br>starts in April</div>
 					</div>
 					<div class="main-image-wrapper">
 						<div class="main-image-coin"></div>
@@ -566,6 +565,8 @@
 
 	<form action="https://pprotocol.io/requests" method="POST" class="popup large submit-popup" id="connect-popup">
 		<div class="popup-title">Request Tokenization</div>
+		<p>In order to make an investment request, please provide your name, email address and the amount you plan to invest in usd or BTC/ETH.</p>
+		<br>
 		<div class="form">
 			<div class="form-box">
 				<div class="form-box-title">
@@ -672,7 +673,6 @@
 	<script src="../js/slick.min.js"></script>
 	<script src="../js/alfaNavbar.min.js"></script>
 	<script src="../js/jquery.fancybox.min.js"></script>
-	<script src="../js/typed.min.js"></script>
 	<script src="../js/scripts.js?v2"></script>
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
