--- a/index.html
+++ b/index.html
@@ -561,9 +561,8 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">Participate in pre-IEO</a>
 			</div>
 		</div>
-		<div class="colored-bg v2 box-wrapper">
+		<div class="colored-bg v2 box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.jpg);"></div>
-
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">Home</a></li>
