--- a/jp/index.html
+++ b/jp/index.html
@@ -561,7 +561,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">プレIEOに参加する</a>
 			</div>
 		</div>
-		<div class="colored-bg v2 box-wrapper">
+		<div class="colored-bg v2 box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.jpg);"></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
