--- a/kr/index.html
+++ b/kr/index.html
@@ -421,7 +421,7 @@
 				<a href="/users/sign_up" class="button white moved-to-bottom-panel hide">개인적 판매에 참여하다</a>
 			</div>
 		</div>
-		<div class="colored-bg v2 box-wrapper">
+		<div class="colored-bg v2 box-wrapper token-inside">
 			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.jpg);"></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
