--- a/ch/index.html
+++ b/ch/index.html
@@ -562,7 +562,7 @@
 			</div>
 		</div>
 		<div class="colored-bg v2 box-wrapper token-inside">
-			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.jpg);"></div>
+			<div class="box-bg-image" style="background-image: url(/images/tokensale-bg-image.png);"></div>
 			<div class="page-scroller-wrapper">
 				<ul class="page-scroller">
 					<li class="page-scroller-item"><a href="#main" class="page-scroller-link">主页</a></li>
